--- a/views/perft.html
+++ b/views/perft.html
@@ -62,18 +62,31 @@
 			<?php
 			
 			$time = microtime();
-					$time = explode(' ', $time);
-					$time = $time[1] + $time[0];
-					$finish = $time;
-					$total_time = round(($finish - $start), 4);
-					
-					$total_time *= 1000;
-					$total_time = round($total_time);
-					
-					?>
+			$time = explode(' ', $time);
+			$time = $time[1] + $time[0];
+			$finish = $time;
+			$total_time = round(($finish - $start), 4);
+			
+			$total_time *= 1000;
+			$total_time = round($total_time);
+			
+			?>
 			
 			Total Load Time: <?php echo $total_time; ?> ms<br />
 			Per Move Tree: <?php echo floor($total_time / $move_trees_generated); ?> ms<br />
 		</p>
+		
+		<?php if ( DEBUG ): ?>
+		
+			<p>
+				<b><i><u>DEBUG</u></i></b><br />
+				<?php foreach ( $debug as $key => $value ): ?>
+				
+					<?php echo $key; ?> - <?php echo $value['count']; ?> - <?php echo $value['fen']; ?><br />
+				<?php endforeach; ?>
+				
+			</p>
+		<?php endif; ?>
+		
 	</body>
 </html>
