--- a/views/perft.html
+++ b/views/perft.html
@@ -22,36 +22,74 @@
 			<p>
 				FEN:<br />
 				<input type="text" name="fen" value="<?php echo $fen; ?>" /><br />
-				<input type="submit" value="Import FEN" />
+			</p>
+			
+			<p>
+				Depth:<br />
+				<input type="number" name="perft_depth" value="<?php echo $perft_depth; ?>" /><br />
+			</p>
+			
+			<p>
+				Detail Level:<br />
+				<input type="radio" name="detail_level" value="1" <?php if ( $detail_level == 1 ) {echo "checked";} ?> /> Nodes Only
+				<input type="radio" name="detail_level" value="2" <?php if ( $detail_level == 2 ) {echo "checked";} ?> /> Details
+				<input type="radio" name="detail_level" value="3" <?php if ( $detail_level == 3 ) {echo "checked";} ?> /> Checks & Checkmates
+			</p>
+			
+			<p>
+				Debug:<br />
+				<input type="radio" name="debug" value="0" <?php if ( $debug == 0 ) {echo "checked";} ?> /> Normal
+				<input type="radio" name="debug" value="1" <?php if ( $debug == 1 ) {echo "checked";} ?> /> Debug
+			</p>
+			
+			<p>
+				<input type="submit" value="Perft" />
 			</p>
 		</form>
 		
 		<table>
 			<thead>
 				<tr>
-					<th>Depth</th>
-					<th>Nodes</th>
-					<th>Captures</th>
-					<th>En Passants</th>
-					<th>Castles</th>
-					<th>Promotions</th>
-					<th>Checks</th>
-					<th>Checkmates</th>
+						<th>Depth</th>
+						<th>Nodes</th>
+					<?php if ( $detail_level >= 2 ): ?>
+					
+						<th>Captures</th>
+						<th>En Passants</th>
+						<th>Castles</th>
+						<th>Promotions</th>
+						
+					<?php if ( $detail_level >= 3 ): ?>
+					
+						<th>Checks</th>
+						<th>Checkmates</th>
+					<?php endif; ?>
+						
+					<?php endif; ?>
+					
 				</tr>
 			</thead>
 			
 			<tbody>
-				<?php foreach ( $data as $key => $value ): ?>
+				<?php foreach ( $data as $value ): ?>
 					
 					<tr>
-						<td><?php echo $value['depth']; ?></td>
-						<td><?php echo $value['nodes']; ?></td>
-						<td><?php echo $value['captures']; ?></td>
-						<td><?php echo $value['en_passants']; ?></td>
-						<td><?php echo $value['castles']; ?></td>
-						<td><?php echo $value['promotions']; ?></td>
-						<td><?php echo $value['checks']; ?></td>
-						<td><?php echo $value['checkmates']; ?></td>
+							<td><?php echo $value['depth']; ?></td>
+							<td><?php echo $value['nodes']; ?></td>
+						<?php if ( $detail_level >= 2 ): ?>
+						
+							<td><?php echo $value['captures']; ?></td>
+							<td><?php echo $value['en_passants']; ?></td>
+							<td><?php echo $value['castles']; ?></td>
+							<td><?php echo $value['promotions']; ?></td>
+							
+						<?php if ( $detail_level >= 3 ): ?>
+							<td><?php echo $value['checks']; ?></td>
+							<td><?php echo $value['checkmates']; ?></td>
+						<?php endif; ?>
+						
+						<?php endif; ?>
+						
 					</tr>
 				<?php endforeach; ?>
 				
@@ -82,13 +120,15 @@
 			
 		</p>
 		
-		<?php if ( DEBUG ): ?>
+		<?php if ( $debug ): ?>
 		
 			<p>
 				<b><i><u>DEBUG</u></i></b><br />
-				<?php foreach ( $debug as $key => $value ): ?>
+				<?php $count = 0; ?>
+				<?php foreach ( $debug_data as $key => $value ): ?>
 				
-					<?php echo $key; ?> - <?php echo $value['count']; ?> - <?php echo $value['fen']; ?><br />
+					<?php $count++; ?>
+					<?php echo $count; ?> - <?php echo $key; ?> - <?php echo $value['count']; ?> - <?php echo $value['fen']; ?><br />
 				<?php endforeach; ?>
 				
 			</p>
