change URL & branding

--- a/views/index.html
+++ b/views/index.html
@@ -17,11 +17,11 @@
 
 	<body>
 		<h1>
-		AdmiralAdama Chess
+		Chess!
 		</h1>
 		
 		<p>
-		Drag and drop a piece to make a move. No AI support yet, but coming soon!
+		Drag and drop a piece to make a move. No AI support yet, but coming soon.
 		</p>
 		
 		<div class="two_columns">
