change URL & branding

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		
 		<title>
-			AdmiralAdama Chess
+			Chess!
 		</title>
 		
 		<link rel="stylesheet" href="assets/style.css">
